added abstract form and adding hints to stars component

--- a/public/src/includes.scss
+++ b/public/src/includes.scss
@@ -174,4 +174,8 @@ body {
             padding: 0 0 15px;
         }
     }
+
+    .component-star-rating-container {
+        margin-top: 100px;
+    }
 }
