--- a/public/src/includes.scss
+++ b/public/src/includes.scss
@@ -149,6 +149,8 @@
 
 // resets for this component
 body {
+    background: #fafafa;
+
     .fpo {
         margin: 20px;
         background: #f5f5f5;
@@ -175,7 +177,7 @@ body {
         }
     }
 
-    .component-star-rating-container {
-        margin-top: 100px;
+    .component-star-rating-container, .component-dropdown-container {
+        margin: 100px;
     }
 }
